# crew_one

./: .dockerignore  Dockerfile  README.md  architektur.md  docker-compose.yml  nginx.conf  requirements.txt
backend/: .env  Dockerfile  README.md  config.py  main.py  requirements.txt
backend/database/: __init__.py  db.py  models.py
backend/models/: __init__.py  intake.py  schemas.py
backend/routers/: diy.py  intake.py
backend/services/: __init__.py  crewai_service.py  email_service.py  intake_service.py  support_service.py
diy/: PDF_GENERATION_GUIDE.md  README.md  pyproject.toml  report.md
diy/diy/outputs/: arbeitsschritte.md  bewertung.md  einkaufsliste.md  sicherheitshinweise.md
diy/outputs/: arbeitsschritte.md  bewertung.md  einkaufsliste.md  sicherheitshinweise.md
diy/src/diy/: crew.py  main.py
diy/src/diy/config/: agents.yaml  tasks.yaml
diy/src/diy/tools/: __init__.py  bauhaus_search_tool.py
diy/src/diy/tools/print/: __init__.py  pdfmaker.py
diy/src/diy/tools/print/templates/: __init__.py  base_template.py
diy/src/diy/tools/print/templates/styles/: __init__.py  default.css  professional.css
docs/: FRONTEND_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README_FULLSTACK.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.jsx  uiStrings.ts
frontend/src/components/: ErrorModal.jsx  Footer.jsx  Hero.jsx  LoadingModal.jsx  SuccessModal.jsx
frontend/src/services/: api.js  intake.ts
frontend/src/styles/: globals.css
frontend/src/types/: intake.ts
(+10 files in other folders)
