[project]
name = "diy"
version = "0.1.0"
description = "diy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1",
    "markdown>=3.4,<4.0",
    "weasyprint>=62.0,<63.0",
    "duckduckgo-search>=6.1.8,<7.0.0"
]

[project.scripts]
diy = "diy.main:run"
run_crew = "diy.main:run"
train = "diy.main:train"
replay = "diy.main:replay"
test = "diy.main:test"
run_with_trigger = "diy.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
